2012-03-10 John Wu <John dot Wu at ACM dot org>
	* src/util.h: correct typo: FASTBOT -> FASTBIT, change the test on
	FASTBIT_CS_PATTERN_MATCH to give users a chance to disable case
	sensitive matching (-DFASTBIT_CS_PATTERN_MATCH=0 to disable case
	sensitive matching)
	* src/bundle.cpp, ...: harmonize the use of FASTBIT_SYNC_WRITE to
	make _commit is called on windows systems when the macro is
	defined, some functions were missing this branch of the code

2012-03-09 Dominique Prunier <dominique dot prunier at watch4net dot com>
	* src/category.cpp, src/dictionary.h, src/dictionary.cpp,
	src/util.h, src/util.cpp: enable case sensitive pattern matching,
	for additional information, see the following email message
	https://hpcrdm.lbl.gov/pipermail/fastbit-users/2012-March/001104.html

2012-03-09 John Wu <John dot Wu at ACM dot org>
	* tests/scripts/jrf-check.pl, tests/scripts/matchCounts.pl:
	redirect stderr to stdout so that the output from ibis can be
	captured - the default log message has been redirected to stderr

2012-03-08 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp, src/idirekte.h, src/idirekte.cpp: add
	functions to enable ibis::direkte to replace ibis::relic in
	ibis::category (should reduce the index and query response time)
	* src/idirekte.cpp: add construct0 to avoid calling getNullMask
	(which requires a mutex lock on the column), new code passes 'make
	check'

2012-03-07 John Wu <John dot Wu at ACM dot org>
	* src/jnatural.cpp, src/jrange.cpp: replace categorical values
	with integer representation
	* examples/ibis.cpp: rearrange the output of timing information to
	avoid a problem with test case 2 of check-ibis

2012-03-05 John Wu <John dot Wu at ACM dot org>
	* src/MinGW.mak: restore MinGW.mak to the version from SVN 444,
	the last version from Dominique work with cross compilers on
	ubuntu instead of on MinGW/MS Win

2012-03-01 Dominique Prunier <dominique dot prunier at watch4net dot com>